name:                HAH
version:             0.1.0.0
synopsis:            Haskell Against Humanity
description:         A Haskell library for playing Cards Against Humanity
homepage:            https://github.com/adrianparvino/HAH
license:             GPL-3
license-file:        LICENSE
author:              Adrian Parvin D. Ouano
maintainer:          adrianparvino@gmail.com
copyright:           2017 Adrian Parvin D. Ouano
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  
source-repository head
  type:     git
  location: https://github.com/adrianparvino/HAH
